--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,27 @@
     <string name="humidity_example">98%</string>
     <string name="pressure_example">991.98 hPa</string>
     <string name="wind_speed_example">1.22 m/s</string>
-    <string name="celcius">°C</string>
+    <array name="Standard">
+        <item>°K</item>
+        <item>%</item>
+        <item>hPa</item>
+        <item>m/s</item>
+    </array>
+
+    <array name="Metric">
+        <item>°C</item>
+        <item>%</item>
+        <item>hPa</item>
+        <item>m/s</item>
+    </array>
+
+    <array name="Imperial">
+        <item>°F</item>
+        <item>%</item>
+        <item>hPa</item>
+        <item>m/h</item>
+    </array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
